<resources>
    <string name="app_name">To Do List</string>
    <string name="app_settings">Settings</string>
    <string name="add_list">Add</string>
    <string name="edit_list">Edit</string>
    <string name="delete_list">Delete</string>
    <string name="save_list">Save</string>
    <string name="check_list">Check all items</string>
    <string name="uncheck_list">Uncheck all items</string>
    <string name="remove_checked">Remove checked items</string>
    <string name="editing">Editing</string>
    <!-- Reminder -->
    <string name="reminder">Reminder</string>
    <string name="type_text">Type</string>
    <string-array name="type_spinner">
        <item>None</item>
        <item>Pin to status bar</item>
        <item>Time alarm</item>
    </string-array>
    <string name="when_text">When</string>
    <string name="time_text">Time</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="repetition_text">Repetition</string>
    <string-array name="repetition_spinner">
        <item>One-time event</item>
        <item>Daily</item>
        <item>Every weekday (Mon - Fri)</item>
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="preset">In 15 minutes</string>
    <!-- List Items -->
    <string name="text_field">Editable Text</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="view_select">View</string>
    <string name="more_vert">Options</string>
    <string name="check">check</string>
    <!-- Dialogs -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_delete_list_message">"Are you sure you want to delete this list?"</string>
    <string name="dialog_check_list_message">"Are you sure you want to check all items?"</string>
    <string name="dialog_uncheck_list_message">"Are you sure you want to uncheck all items?"</string>
    <string name="dialog_remove_checked_message">"Are you sure you to remove checked items?"</string>
    <!-- General Use -->
    <string name="empty"></string>
    <string name="dot">\u23FA</string>
    <string name="sm_dot">\u2022</string>
    <!-- Preferences -->
    <string name="switch_theme_title">Theme Selector</string>
    <string name="switch_theme_summary_off">Dark Theme</string>
    <string name="switch_theme_summary_on">Light Theme</string>
    <string name="app_version_title">App Version</string>
    <string name="app_version_summary">1.1 04/2018</string>
    <string name="author_title">Author</string>
    <string name="author_summary">Neil Gorham</string>
    <string name="website">http://www.ngorham.net</string>
</resources>
