<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListDetailActivity">
    <item
        android:id="@+id/edit_list"
        android:title="@string/edit_list"
        android:icon="@drawable/ic_edit_gold_18dp"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_list"
        android:title="@string/delete_list"
        android:icon="@drawable/ic_delete_gold_18dp"
        android:orderInCategory="2"
        android:showAsAction="never|withText" />
    <item
        android:id="@+id/check_list"
        android:title="@string/check_list"
        android:icon="@drawable/ic_checkbox_marked_outline_black_18dp"
        android:orderInCategory="3"
        android:showAsAction="never|withText" />
    <item
        android:id="@+id/uncheck_list"
        android:title="@string/uncheck_list"
        android:icon="@drawable/ic_checkbox_blank_outline_black_18dp"
        android:orderInCategory="4"
        android:showAsAction="never|withText" />
    <item
        android:id="@+id/app_settings"
        android:title="@string/app_settings"
        android:icon="@drawable/ic_settings_gold_18dp"
        android:orderInCategory="100"
        android:showAsAction="never|withText" />
</menu>
