<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/add_list"
        android:title="@string/add_list"
        android:icon="@drawable/ic_add_gold_18dp"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/view_select"
        android:title="@string/view_select"
        android:icon="@drawable/ic_view_agenda_black_18dp"
        android:orderInCategory="2"
        android:showAsAction="never|withText"/>
    <item
        android:id="@+id/app_settings"
        android:title="@string/app_settings"
        android:icon="@drawable/ic_settings_gold_18dp"
        android:orderInCategory="100"
        android:showAsAction="never|withText" />
</menu>
