<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="25dp"
    android:paddingStart="25dp">
    <Button
        android:id="@+id/alarm_dismiss_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alarmDismiss"
        android:text="Dismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_dismiss_button" />
    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_text" />
    <TextView
        android:id="@+id/when_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/when_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_spinner" />
    <Button
        android:id="@+id/alarm_presets_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alarmPresetsDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/when_text" />
    <Button
        android:id="@+id/alarm_date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="alarmDateDialog"
        app:layout_constraintEnd_toStartOf="@id/alarm_time_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_presets_button" />
    <Button
        android:id="@+id/alarm_time_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="alarmTimeDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_presets_button" />
    <TextView
        android:id="@+id/repetition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetition_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_date_button" />
    <ImageView
        android:id="@+id/repetition_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/repetition_text"
        android:src="@drawable/ic_repeat_black_18dp"
        app:layout_constraintStart_toEndOf="@+id/repetition_text"
        app:layout_constraintTop_toBottomOf="@+id/alarm_date_button" />
    <Spinner
        android:id="@+id/repetition_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/repetition_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repetition_text" />
</android.support.constraint.ConstraintLayout>
